--- a/lotto/templates/lotto/default.html
+++ b/lotto/templates/lotto/default.html
@@ -7,19 +7,27 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
   <link href="//fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'css/lotto.css'%}">
+  <link rel='stylesheet' href="{% static 'css/lotto.css' %}">
 </head>
 
 <body>
   <div class="page-header">
-    <h1>Selected Lotto Numbers</h1>
+    <h1>
+      Selected Lotto Numbers
+      <a href="{% url 'new_lotto' %}">
+        <span class='glyphicon glyphicon-plus btn btn-default'></span>
+      </a>
+    </h1>
   </div>
   <div class="container lotto">
-    {% for lotto in lottos %}
-      <h2>{{lotto.text}}</h2>
-      <p>{{lotto.update_date}}</p>
-      <p>{{lotto.lottos | linebreaksbr}}</p>
-    {% endfor %}
+     {% for lotto in lottos %}
+
+       <!-- <h2><a href="/lotto/{{ lotto.pk }}/detail/">{{ lotto.text }}</a></h2> -->
+       <h2><a href="{% url 'detail' lottokey=lotto.pk %}">{{ lotto.text }}</a></h2>
+
+       <p>{{ lotto.update_date }}</p>
+       <p>{{ lotto.lottos | linebreaksbr }}</p>
+     {% endfor %}
   </div>
 </body>
 </html>
